# TWON-LSS

./: .gitignore  LICENSE  Makefile  README.md  genindex.html  index.html  modules.interfaces.html  modules.schemas.html  modules.simulations.html  modules.utilities.html  objects.inv  py-modindex.html  pyproject.toml  searchindex.js
.github/workflows/: documentation.yml
_modules/: index.html
_modules/twon_lss/interfaces/: agent.html  ranker.html  simulation.html
_modules/twon_lss/schemas/: feed.html  network.html  post.html  user.html
_modules/twon_lss/simulations/: twon_base.html
_modules/twon_lss/simulations/twon_base/: agent.html  ranker.html
_modules/twon_lss/utility/: llm.html
docs/: Agent.md  Makefile  Ranking.md  Schemas.md  Utility.md  conf.py  index.rst  modules.utilities.rst  twon_lss.agent.rst  twon_lss.ranking.rst  twon_lss.schemas.rst  twon_lss.utility.rst
docs/network/: Readme.md
docs/source/: Readme.md  conf.py  index.rst
docs/source/_templates/: custom-class-template.rst  custom-module-template.rst
examples/: Graph.ipynb  Network.ipynb  Ranker-Success-Driven.ipynb  Ranker.ipynb  Simulation.ipynb  Utility.ipynb  __playground.ipynb  agent.ipynb
examples/network/: Ranker-Success-Driven.ipynb
examples/simulations/bcm/: Evaluation.ipynb  Simulation.ipynb
examples/simulations/bcm/output/: feed.json  feed.step_0.json  feed.step_10.json  feed.step_20.json  feed.step_30.json  feed.step_35.json  feed.step_40.json  (+104 more)
examples/simulations/fine-tuned/: Agent.ipynb  Simulation.ipynb
examples/simulations/twon_base/: Agent.ipynb  Ranker.ipynb  Simulation.ipynb
reports/: Readme.md
simulations/bcm/: Evaluation.ipynb  Simulation.ipynb
simulations/bcm/output/: individuals.json
simulations/twon_base/: 128agents_WattsStrogatz.py  32agents_ErdosRenyi.py  8agents_FullyConnected.py  Evaluation.ipynb  Readme.md  SimulationDemo.ipynb
simulations/twon_base/output/: feed.json  individuals.json  network.json
simulations/wp3_simulation/00_extra_scripts/: 00-setup-personas.ipynb  01-describe-personas.ipynb  03-create_snapshot.ipynb
simulations/wp3_simulation/01_first_try/: sim.py
simulations/wp3_simulation/01_simulation/: eval.ipynb  sim.py
simulations/wp3_simulation/data/: agents.instructions.json  profiler.bio.txt  profiler.cognition.txt
src/twon_lss/: __init__.py  graph.py  simulation.py
src/twon_lss/agent/: __init__.py  _interface.py
src/twon_lss/interfaces/: __init__.py  agent.py  ranker.py  simulation.py
src/twon_lss/network/: __init__.py  schemas.py
src/twon_lss/ranking/: __init__.py  _interface.py
src/twon_lss/schemas/: __init__.py  feed.py  interaction.py  mappings.py  network.py  post.py  user.py
src/twon_lss/simulations/: __init__.py
src/twon_lss/utility/: __init__.py  decay.py  eval.py  llm.py  noise.py  visualize.py
tests/: conftest.py  test__graph.py  test__ranker_success_driven.py  test_network.py  test_ranking.py  test_schemas.py  test_simulation_twon_base.py  test_utility.py
tests/network/ranker/: test__success_driven.py
(+34 files in other folders)
