[project]
name = "twon-lss"
version = "0.1.0"
description = "TWON Large Scale Simulation (LSS) - A Python package for simulating social networks using the language models."
readme = "README.md"
authors = [
    { name = "Simon Münker", email = "muenker@uni-trier.de" }
]
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.4.2",
    "pydantic>=2.11.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
examples = [
    "notebook>=7.4.3",
    "rich>=14.0.0",
    "seaborn>=0.13.2",
]
lint = [
    "ruff>=0.11.11",
    "ty>=0.0.1a7",
]

[project.scripts]
twon-lss = "twon_lss:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["."]
log_cli = true
log_cli_level = "INFO"
filterwarnings = [
    "ignore::DeprecationWarning"
]
