[project]
name = "twon-lss"
version = "0.1.0"
description = "TWON Large Scale Simulation (LSS) - A Python package for simulating social networks using the language models."
readme = "README.md"
authors = [
    { name = "Simon Münker", email = "muenker@uni-trier.de" }
]
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.33.4",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "plotly>=6.3.0",
    "pydantic>=2.11.5",
    "rich>=14.0.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.9.post2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "python-dotenv>=1.1.1",
    "sphinx>=8.1.3",
    "sphinx-book-theme>=1.1.4",
    "sphinx-mdinclude>=0.6.2",
]
examples = [
    "ipywidgets>=8.1.7",
    "notebook>=7.4.3",
    "rich>=14.0.0",
    "seaborn>=0.13.2",
]
lint = [
    "ruff>=0.11.11",
    "ty>=0.0.1a7",
]

[project.scripts]
twon-lss = "twon_lss:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["."]
log_cli = true
log_cli_level = "INFO"
filterwarnings = [
    "ignore::DeprecationWarning"
]
addopts = "--capture=no"
